style/global.css
html:has(dialog[open]) {
  overflow: hidden;
}

footer > div:first-child {
  font-size: 1.5rem;
  gap: 1.25rem;
}

footer > div:first-child button {
  border-style: none;
}

ol,
ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

a,
button {
  align-items: center;
  color: var(--blue);
  display: inline-flex;
  justify-content: center;
  max-width: calc(100vw - 2.5rem);
  min-height: 2rem;
  min-width: 2rem;
  width: max-content;
}

button {
  border-color: var(--blue);
  border-radius: 0.5rem;
  border-style: solid;
  border-width: 1px;
  background: none;
  cursor: pointer;
  font-size: inherit;
  margin-block: 0.75rem;
  padding: 0.25rem 0.675rem;
}

label {
  align-items: flex-start;
  display: flex;
  flex-direction: column;
  font-size: 0.875rem;
  width: 100%;
}

input,
select,
textarea {
  background-color: var(--bg);
  border-radius: 0.5rem;
  border-color: var(--slate);
  border-style: solid;
  border-width: 1px;
  color: inherit;
  font-size: 1rem;
  padding: 0.5rem;
  width: 100%;
}

select {
  cursor: pointer;
}

textarea {
  font: inherit;
  max-height: 8rem;
  min-height: 4rem;
  resize: vertical;
}

dialog {
  border-radius: 1rem;
  border-style: solid;
  margin: 20vh auto;
  padding: 0;
  width: min(calc(100vw - 2.5rem), 30rem);
}

dialog::backdrop {
  background-color: rgba(0, 0, 0, 0.8);
}

dialog,
dialog > div {
  border-radius: 1rem;
}

dialog > div {
  padding: 1.25rem;
}

dialog h1 {
  font-size: 1.125rem;
  letter-spacing: normal;
  text-align: left;
}

.dialog-button-container {
  column-gap: 1.25rem;
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-end;
}

htm-toast {
  --htm-bg: var(--fg);
  --htm-fg: var(--bg);
  line-height: 1.3;
}

htm-spinner {
  margin-block: 1.25rem;
}

.page-content {
  display: grid;
}

.lobby .btn {
  margin-block: 0.5rem 1.25rem;
}

.lobby ul,
.waiting-room ul {
  border-block-start: 1px solid var(--slate);
}

.lobby ul li,
.waiting-room ul li {
  align-items: center;
  border-block-end: 1px solid var(--slate);
  display: flex;
  gap: 1.25rem;
  justify-content: space-between;
}

.lobby ul li span,
.waiting-room ul li span {
  font-size: 1.125rem;
  font-weight: 600;
}

.waiting-room ul li span {
  padding-block: 0.5rem;
}

.waiting-room ul li div:last-child {
  display: flex;
  column-gap: 1rem;
  flex-wrap: wrap-reverse;
  white-space: nowrap;
}

.waiting-room,
.request-to-join-form {
  display: flex;
  flex-direction: column;
  gap: 0.75rem;
}

.score-container {
  align-items: center;
  display: flex;
  flex-wrap: wrap;
  gap: 0.75rem;
  justify-content: center;
}

.score-container li {
  align-items: center;
  border-radius: 1.25rem;
  display: flex;
  flex-direction: column;
  padding: 0.75rem 1.25rem;
  width: 9rem;
}

.score-container li > span:first-child {
  font-size: 1.125rem;
}

.score-container li > div {
  font-size: 1.375rem;
  font-weight: 700;
}

.btn {
  background-color: var(--bg-blue);
  border-radius: 0.75rem;
  border-style: none;
  color: var(--light);
  font-weight: 600;
  padding: 0.5rem 1rem;
  width: 100%;
}

.red {
  border-color: var(--red);
  color: var(--red);
}

.search-container {
  margin-block-end: 0.75rem;
}

.search-container ul {
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.search-container ul li {
  align-items: center;
  border-block-end: 1px solid var(--slate);
  display: flex;
  gap: 1.25rem;
  justify-content: space-between;
  width: 100%;
}

.search-container ul li > div:first-child {
  display: flex;
  flex-direction: column;
  margin-block: 0.5rem;
}

.search-container ul li > span {
  font-size: 1.125rem;
}

.game-rounds {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  margin-block: 1.25rem;
}

.game-rounds > fieldset {
  border-radius: 8px;
  border-color: var(--gray);
  border-width: 1px;
  color: var(--gray);
  font-size: 0.875rem;
  padding-inline: 0.75rem;
}

.game-rounds > fieldset > div {
  align-items: center;
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem 0.25rem;
}

.game-rounds > fieldset > div > div {
  background-color: var(--gray);
  color: color-mix(in oklab, var(--bg) 80%, transparent);
  padding: 0.25rem 0.5rem;
  border-radius: 0.75rem;
}

.score-container li {
  background-color: color-mix(in oklab, var(--gray) 10%, transparent);
  position: relative;
}

.score-container li div:not(.red) {
  color: color-mix(in oklab, var(--gray) 70%, transparent);
}

.score-container li::before {
  background: radial-gradient(
    circle at top right,
    color-mix(in oklab, var(--gray) 15%, transparent),
    transparent 70%
  );
  border-radius: inherit;
  content: "";
  inset: 0;
  pointer-events: none;
  position: absolute;
}

